# usb2-highspeed-core

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
applets/: bulk_in_speed_test.py  bulk_speed_test.py  ulpi-test.py
docs/: features.rst
examples/: isochronous_count.py  usb2_audio.py
examples/debugging/: basic_ila.py  basic_ila_fast_domain.py  ila_shared_bus.py
examples/eptri/: Makefile  README.md  eptri_device.py  eptri_example.c
luna/: usb2.py
luna/gateware/debug/: ila.py
luna/gateware/interface/: spi.py  ulpi.py
luna/gateware/interface/gateware_phy/: receiver.py
luna/gateware/platform/: arrow_deca.py  de0_nano.py  qmtech_10cl006.py
luna/gateware/stream/: __init__.py
luna/gateware/usb/devices/: ila.py
luna/gateware/usb/usb2/: device.py  endpoint.py  packet.py
luna/gateware/usb/usb2/endpoints/: isochronous.py  stream.py
luna/gateware/usb/usb2/host/: packet.py
luna/gateware/usb/usb2/interfaces/: eptri.py
