[tool.poetry]
name = "luna"
version = "0.1.0-dev.0"
description = "USB2 highspeed core, written in Amaranth HDL"
authors = ["Katherine Temkin <k@ktemkin.com>", "Hans Baier <hansfbaier@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"
pyusb = "^1.1.1"
pyvcd = "^0.2.4"
libusb1 = "^1.9.2"
apollo-fpga = "^0.0.5"
ziglang = "^0.8.0"
amaranth = {git = "https://github.com/amaranth-lang/amaranth.git", branch="main"}
amaranth-soc = {git = "https://github.com/amaranth-lang/amaranth-soc.git", branch="main"}
amaranth-boards = {git = "https://github.com/amaranth-lang/amaranth-boards.git", branch="main"}
usb-descriptors = {git = "git://github.com/hansfbaier/python-usb-descriptors.git"}
amlib = {git = "https://github.com/amaranth-community-unofficial/amlib", branch="main"}

[tool.poetry.dev-dependencies]
tox = "^3.22.0"
amaranth-stdio = {git = "https://github.com/amaranth-lang/amaranth-stdio.git", branch="main"}
prompt-toolkit = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
